Fixed contents are overflowed on search result pages.

--- a/css/content.css
+++ b/css/content.css
@@ -70,11 +70,15 @@
 	max-width: 100%;
 }
 
+#dokuwiki__content .page
+{
+	overflow-wrap: break-word;
+}
+
 #dokuwiki__content .page p
 {
 	line-height: 24px;
 	margin: 0 0 24px;
-	overflow-wrap: break-word;
 }
 
 #dokuwiki__content .page ul,ol
